<resources>
    <string name="app_name">ULEV1+</string>
    <string name="about_box_text">Ultralight EV1 reader/writer. Version %s\n\nSource: https://github.com/grspy/ulev1plus\nE-mail: app-support@grspy.com.</string>
    <string name="about_box_title">About ULEV1+</string>
    <string name="ulev1_tag_found">Mifare Ultralight EV1 tag found! UID: %s</string>
    <string name="enter_tag_pass">Enter password for tag</string>
    <string name="not_ulev1_tag_error">Error: This is not an Ultralight EV1 tag</string>
    <string name="tag_connect_error">Error: Unable to connect with the tag</string>
    <string name="color_legend">UID | BCC | LockBytes | OTP | CFG | PWD/PACK</string>
    <string name="uid_color">#FFFAEA68</string>
    <string name="bcc_color">#FFC1B764</string>
    <string name="lockbytes_color">#FF6F916F</string>
    <string name="otp_color">#FF638F99</string>
    <string name="cfg_color">#FFC4717C</string>
    <string name="pwdpack_color">#FFB0638C</string>
    <string name="read_tag_error">Error: Unable to read tag</string>
    <string name="no_data_error">Error: No data to write on tag</string>
    <string name="data_write_success">Successfully wrote the data onto the tag</string>
    <string name="data_verification_failed">Verification of written data failed. Ensure that the data is correct.</string>
    <string name="select_dump">Select a dump file</string>
    <string name="datetime_format">yyyyMMddHHmmss</string>
    <string name="data_dump_success">Data dumped successfully to: %s/%s</string>
    <string name="no_data_error_read_tag">Error: No data to save to file. Try to read a tag first.</string>
    <string name="tag_connect_error_wrong_pass">Error: Unable to connect with the tag. Maybe wrong password?</string>
    <string name="uid">UID: %s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text_plain">text/plain</string>
    <string name="text_csv">text/comma-separated-values</string>
    <string name="uid_list">UID List</string>
    <string name="select_import_file">Select a list of UIDs to import</string>
    <string name="list_export_success">List exported successfully to: %s/%s</string>
    <string name="uid_list_export_file">%s_uid-list-export.csv</string>
    <string name="uid_pass_pack">UID,PASSWORD,PACK</string>
    <string name="insert_uid_pass_pack">Insert UID/Password/(PACK)</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="write">WRITE</string>
    <string name="read">READ</string>
    <string name="scan_a_tag">Scan a tag</string>
    <string name="input_uid">UID :</string>
    <string name="input_password">Password :</string>
    <string name="input_password_hint">Input password</string>
    <string name="input_pack">PACK :</string>
    <string name="input_pack_hint">Input PACK (optional)</string>
    <string name="save_tag_data">Save Tag Data</string>
    <string name="input_uid_hint">Input UID</string>
</resources>