<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tag_contents_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/scan_a_tag"
        android:inputType="textMultiLine|textNoSuggestions"
        android:longClickable="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="true"
        android:typeface="serif" />

    <TextView
        android:id="@+id/legendTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp" />

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read" />

            <Button
                android:id="@+id/btn_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/write" />

            <Button
                android:id="@+id/btn_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/load" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

        </LinearLayout>

    </android.support.design.widget.BottomNavigationView>


</LinearLayout>